보안: CORS 허용 IP를 properties로 분리, 민감파일 git 추적 제거
- SecurityConfig.java: 하드코딩된 IP를 app.cors.allowed-origins 프로퍼티로 대체
- application.properties: app.cors.allowed-origins 기본값(localhost:3000) 추가
- application-local.properties.example: cors 설정 템플릿 추가
- frontend/.env.local, application-local.properties: git 추적에서 제거 (파일은 로컬에 유지)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>